--- a/assets/styles.css
+++ b/assets/styles.css
@@ -25,7 +25,7 @@ body {
   margin: 25px 100px;
   float: right;
   border: 1px solid #d8d8d8;
-  padding: 30px 30px;
+  padding: 10px 30px;
   background-color: white;
   -webkit-box-shadow: 0px 2px 15px -12px rgba(0, 0, 0, 0.57);
   -moz-box-shadow: 0px 2px 15px -12px rgba(0, 0, 0, 0.57);
@@ -42,8 +42,8 @@ body {
 
 
 .disabledButton {
-  background-color: #d8d8d8 !important;
-  cursor: not-allowed !important;
+  background-color: #d8d8d8;
+  cursor: not-allowed;
 }
 
 h1 {
